--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -19,6 +19,7 @@ jobs:
         node-version: 16.x
         cache: 'npm'
         cache-dependency-path: ./package-lock.json
+    - run: npm ci
     - run: npm run build
     - name: Publish site
       uses: actions/upload-artifact@v3
