--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
   "dependencies": {
     "markdown-it": "^13.0.1",
     "markdown-it-attrs": "^4.1.4",
-    "markdown-it-footnote": "^3.0.3",
-    "markdown-it-obsidian": "^1.1.0",
-    "title-case": "^3.0.3"
+    "markdown-it-footnote": "^3.0.3"
   }
 }
