--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -27,7 +27,7 @@ jobs:
         name: site
         path: _site
   publish:
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: [site]
     steps:
