--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clean-css": "^5.3.1"
   },
   "dependencies": {
+    "@sindresorhus/slugify": "^1.1.2",
     "markdown-it": "^13.0.1",
     "markdown-it-attrs": "^4.1.4",
     "markdown-it-footnote": "^3.0.3"
